Adds view specs for the eligibility check form
Here we also update the microcopy files, our specs check that our internationalisation code is working too. This means when we need to internationalise copy like buttons and labels we should be able to just update the config/locales/<lang>.yml file.

--- a/app/views/eligibility_checks/new.html.erb
+++ b/app/views/eligibility_checks/new.html.erb
@@ -1,2 +1,8 @@
 <h1>EligibilityCheck#new</h1>
 <p>Find me in app/views/eligibility_checks/new.html.erb</p>
+
+<%= form_with model: @eligibility_check do |form| %>
+<%= form.label :postcode %>
+<%= form.text_field :postcode %>
+<%= form.submit %>
+<% end %>
