Adds a view spec for success screen microcopy

--- a/app/views/eligibility_checks/success.html.erb
+++ b/app/views/eligibility_checks/success.html.erb
@@ -1,3 +1,4 @@
 <div>
-  <h1>Success</h1>
+  <h1><%= I18n.t('screens.eligibility_success.title') %></h1>
+  <p><%= I18n.t('screens.eligibility_success.message') %></p>
 </div>
