Applies the allowed_postcodes validator to eligibilitycheck

--- a/app/views/eligibility_checks/_field_errors.html.erb
+++ b/app/views/eligibility_checks/_field_errors.html.erb
@@ -1,5 +1,5 @@
-<% @eligibility_check.errors.full_messages_for(attribute).each do |message| %>
+<% @eligibility_check.errors[attribute].each do |error| %>
 <span>
-  <span><%= message %></span>
+  <span><%= error %></span>
 </span>
 <% end %>
